aws-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-web-app
spec:
  containers:
    - name: my-web-app
      image: 140023382994.dkr.ecr.eu-north-1.amazonaws.com/my-web-app:latest
      ports:
        - containerPort: 80
  imagePullSecrets:
    - name: ecr-secret
