k8s-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: web-app
        image: 140023382994.dkr.ecr.eu-north-1.amazonaws.com/myecr-repo
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: ecr-secret
